--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.2.2.jar=../../../Desktop/Acad\u00e9mico/Tercer Semestre/Estructura de Datos/Proyecto-2/lib/jcalendar-1.2.2.jar
 file.reference.LGoodDatePicker-11.2.1.jar=../../../Desktop/Acad\u00e9mico/Tercer Semestre/Estructura de Datos/Proyecto-2/lib/LGoodDatePicker-11.2.1.jar
+file.reference.LGoodDatePicker-11.2.1.jar-1=D:\\Desktop\\Acad\u00e9mico\\Tercer Semestre\\Estructura de Datos\\LGoodDatePicker-11.2.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -46,7 +47,8 @@ javac.classpath=\
     ${file.reference.LGoodDatePicker-11.2.1-executable-demo.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.LGoodDatePicker-11.2.1.jar}:\
-    ${file.reference.jcalendar-1.2.2.jar}
+    ${file.reference.jcalendar-1.2.2.jar}:\
+    ${file.reference.LGoodDatePicker-11.2.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
